--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
            <p id="countinfoPara" class="info"></p>
            <div>
-            <button class="nav-btn">Previous page</button>
-            <button class="nav-btn">Next page</button>
+            <button id="prevBtn" class="hidden nav-btn">Previous page</button>
+            <button id="nextBtn" class="hidden nav-btn">Next page</button>
            </div>
         </div>
     </main>
